# context-kubernetes

./: .gitignore  LICENSE  NEXTSTEPS.md  README.md  pyproject.toml
benchmarks/: __init__.py  exp1_routing_quality.py  exp2_permission_correctness.py  exp3_freshness.py  exp4_latency.py  exp5_approval_isolation.py  exp_a_governed_vs_ungoverned.py  exp_b_freshness_cost.py  exp_c_attack_scenarios.py  exp_track1_full.py  exp_v1_stronger_baselines.py  results_combined.json  results_exp1.json  results_exp2.json  results_exp3.json  results_exp4.json  results_exp5.json  results_exp_a.json  results_exp_b.json  results_exp_c.json  results_track1.json  results_v1_baselines.json  run_all_value_experiments.py  test_queries.py  test_queries_expanded.py
context_kubernetes/: __init__.py  models.py
context_kubernetes/api/: __init__.py  app.py  state.py
context_kubernetes/audit/: log.py
context_kubernetes/config/: __init__.py  manifest.py
context_kubernetes/cxri/: __init__.py  interface.py
context_kubernetes/cxri/connectors/: git_connector.py  postgres_connector.py
context_kubernetes/permissions/: engine.py
context_kubernetes/reconciliation/: loop.py
context_kubernetes/router/: __init__.py  intent.py  ranking.py  router.py
docs/: tutorial.md
formal/: PermissionModel.als  README.md  ReconciliationLoop.cfg  ReconciliationLoop.tla  verification-results.md
manifests/: sales-domain.yaml
tests/integration/: test_api.py
tests/unit/: test_audit.py  test_git_connector.py  test_models.py  test_permissions.py  test_reconciliation.py  test_router.py
(+8 files in other folders)
